--- a/language/libra-vm/Cargo.toml
+++ b/language/libra-vm/Cargo.toml
@@ -29,6 +29,9 @@ move-vm-types = { path = "../move-vm/types", version = "0.1.0" }
 vm = { path = "../vm", version = "0.1.0" }
 serde_json = "1.0.58"
 serde = { version = "1.0.116", default-features = false }
+tracing = { version="0.1" }
+tracing-atrace = { path = "../../common/tracing", version = "0.1.0" }
+libatrace = { path = "../../common/libatrace", version = "0.1.0" }
 
 [dev-dependencies]
 proptest = "0.10.1"
